<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中华信鸽</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_camera">比赛拍照</string>
    <string name="title_activity_start">中华信鸽</string>
    <string name="login_loading">登录中&#8230;</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="more">More</string>
    <string name="notice">Notice</string>
    <string name="order">Order</string>
    <string name="home">Home</string>
    <string name="news">新闻</string>
    <string name="games">比赛</string>
    <string name="shop">商城</string>
    <string name="pageHome">鸽舍</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="confirm_quit_app">确认退出系统</string>
    <string name="action_letfly_done">确认司放</string>
    <string name="game_mgr">比赛管理</string>
    <string name="game_gather">集鸽信息</string>
    <string name="game_transport">司放途中</string>
    <string name="game_letfly">比赛司放</string>
    <string name="title_activity_game_detail">比赛详情</string>
    <string name="game_loading">正在加载比赛&#8230;</string>
    <string name="game_loading_error">加载比赛失败</string>
    <string name="letfly_done_error">确认司放失败</string>
    <string name="letfly_done_success">确认司放成功</string>

    <!-- game detail -->
    <string name="game_name">比赛名称：</string>
    <string name="game_type">比赛类型：</string>
    <string name="game_distance">空      距：</string>
    <string name="game_bonus">奖      金：</string>
    <string name="game_gather_date">集鸽时间：</string>
    <string name="game_fly_date">放飞时间：</string>
    <string name="game_fly_place">放飞地点：</string>
    <string name="game_referee">裁		判：</string>
    <string name="game_gather_place">集鸽地点：</string>
    <string name="game_add">添加比赛</string>
    <string name="game_trace">行程记录</string>
    <string name="game_edit">编辑比赛</string>
    <string name="game_page_num">集鸽羽数：</string>
    <string name="game_info_latitude">集鸽纬度：</string>
    <string name="game_info_longitude">集鸽经度：</string>
    <string name="game_letfly_latitude">司放纬度：</string>
    <string name="game_letfly_longitude">司放经度：</string>
    <string name="location">定位</string>
    <string name="game_info_memo">集鸽备注：</string>
    <string name="game_letfly_time">放飞时间：</string>
    <string name="game_letfly_place">放飞地点：</string>
    <string name="action_game_info_camera">集鸽拍照</string>
    <string name="action_transport_begin">开始司放</string>
    <string name="action_transport_end">结束司放</string>
    <string name="action_transport_complete">司放完成</string>
    <string name="action_game_transport_camera">运输拍照</string>
    <string name="action_game_letfly_camera">司放拍照</string>
    <string name="action_game_info_image_upload">上传照片</string>
    <string name="action_update">更新</string>
    <string name="action_add">添加</string>
    <string name="action_confirm">确认</string>
    <string name="action_camera">拍照</string>
    <string name="game_transport_start_location">起始坐标：</string>
    <string name="game_transport_current_location">当前坐标：</string>
    <string name="title_activity_upload_file">UploadFileActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="btn_ok">OK</string>
    <string name="btn_pick">Pick From Gallery</string>
    <string name="btn_pick_mul">选择要上传的图片</string>
    <string name="btn_upload">上传</string>
    <string name="title_activity_add_game">添加比赛</string>
    <string name="title_activity_edit_game">编辑比赛</string>

    <!-- edit game -->
    <string name="add_referee_title">请输入裁判</string>

    <!-- gather -->
    <string name="dms_gps_format_error">经纬度格式不正确</string>

    <!-- add game -->
    <string-array name="game_type_array">
        <item>协会比赛</item>
        <item>地区比赛</item>
        <item>鸽舍比赛</item>
    </string-array>

    <integer-array name="game_type_array_num">
        <item>10</item>
        <item>18</item>
        <item>28</item>
    </integer-array>

    <string name="game_add_select_gather_time_title">选择集鸽时间</string>
    <string name="game_add_select_fly_time_title">选择放飞日期</string>
    <string name="title_activity_trace_mark">TraceMarkActivity</string>
    <string name="add_error_from_server">添加比赛失败，请联系系统管理员.</string>
    <string name="update_error_from_server">修改比赛失败，请联系系统管理员.</string>
    <string name="update_error_from_success">比赛修改成功</string>
    <string name="update_gather_info_error">集鸽信息确认失败，请联系系统管理员.</string>
    <string name="update_gather_info_success">集鸽信息确认成功.</string>
    <string name="add_game_loading">正在添加新比赛&#8230;</string>
    <string name="update_game_loading">正在修改比赛&#8230;</string>

    <!-- trace -->
    <string name="trace_title">行程记录</string>
    <string name="trace_title_note">发表行程记录</string>
    <string name="trace_publish">发表</string>
    <string name="title_activity_upload_images">上传图片</string>
    <string name="title_activity_update_game">编辑比赛信息</string>
    <string name="trace_uploading">正在发表记录&#8230;</string>
    <string name="trace_history_title">行程记录历史记录</string>
    <string name="trace_history_loading">数据加载中&#8230;</string>
    <string name="begin_transport_error">开始运输失败.</string>
    <string name="end_transport_error">结束运输失败.</string>
    <string name="add_trace_success">添加行程记录成功</string>
    <string name="add_trace_error">添加行程记录失败</string>

    <!-- upload -->
    <string name="upload_images_error">上传照片出错，请重新上传.</string>
    <string name="upload_images_success">上传照片成功</string>
    <string name="upload_images_progreess">上传进度</string>
    <string name="title_activity_single_image_show">SingleImageShowActivity</string>

    <!-- take picture -->
    <string name="take_pic_loading_text">加载地理位置信息&#8230;</string>
    <string name="take_pic_save_text">照片正在保存&#8230;</string>
</resources>
