<ScrollView android:id="@+id/scroll" 
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="match_parent" android:layout_height="match_parent"  
    android:fillViewport="true" >  
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:paddingBottom="@dimen/activity_vertical_margin"
	    android:paddingLeft="@dimen/activity_horizontal_margin"
	    android:paddingRight="@dimen/activity_horizontal_margin"
	    android:paddingTop="@dimen/activity_vertical_margin"
	     >
	
	   		 <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_name"/>
				    
				    <EditText 
				        android:id="@+id/game_name"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				    
				</LinearLayout>
	
	   		 <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_type"/>
				    
				    <Spinner android:id="@+id/game_type"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				    
				</LinearLayout>
				
	   		 <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_distance"/>
				    
				    <EditText 
				        android:id="@+id/game_distance"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				    
				</LinearLayout>
				
	   		 <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_bonus"/>
				    
				    <EditText 
				        android:id="@+id/game_bonus"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				    
				</LinearLayout>
				
	   		  <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_gather_date"/>
				    <EditText 
				        android:id="@+id/game_add_gather_time"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				   
				</LinearLayout>
	
	   		  
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_gather_place"/>
				    <EditText 
				        android:id="@+id/game_add_gather_place"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				   
				</LinearLayout>
				
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_fly_date"/>
				    <EditText 
				        android:id="@+id/game_add_fly_date"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				   
				</LinearLayout>
				
							<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_fly_place"/>
				    <EditText 
				        android:id="@+id/game_add_fly_place"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"/>
				   
				</LinearLayout>
				
				<LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal" >
				    
				    <TextView android:layout_width="70dp"
				        android:layout_height="wrap_content"
				        android:text="@string/game_referee"/>
				    <ListView 
				        android:id="@+id/referee_listview"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        >
				        
				    </ListView>
				</LinearLayout>
	   		  <LinearLayout 
				    android:layout_width="match_parent"
				    android:layout_height="wrap_content"
				    android:orientation="horizontal"
				    >
				    <Button
	                android:id="@+id/game_add_confirm_btn"
	                android:layout_width="fill_parent"
	                android:layout_height="wrap_content"
	                android:layout_gravity="right"
	                android:layout_marginTop="16dp"
	                android:paddingLeft="32dp"
	                android:paddingRight="32dp"
	                android:textColor="@color/white"
	                android:background="@drawable/blue_button"
	                android:text="@string/action_update" />
				</LinearLayout>
	
	</LinearLayout>
</ScrollView>