<?xml version="1.0" encoding="utf-8"?>
<RadioGroup 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/game_nav_group"
    android:layout_width="fill_parent"
    android:layout_height="45dp"
    android:orientation="horizontal" >
    <RadioButton
        android:id="@+id/pageMgr"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/fragment_bottom_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/home"
        android:checked="true"
        android:textColor="@color/white"
        android:textSize="12sp" />
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@color/white" />
    <RadioButton
        android:id="@+id/pageInfo"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/fragment_bottom_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/order"
        android:textColor="@color/white"
        android:textSize="12sp" />
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@color/white"
        />
    <RadioButton
        android:id="@+id/pageTransport"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/fragment_bottom_selector"
        android:button="@null"
        android:gravity="center"
        android:text="@string/notice"
        android:textColor="@color/white"
        android:textSize="12sp" />
    <View
        android:layout_width="1dp"
        android:layout_height="fill_parent"
        android:background="@color/white" />
    <RadioButton
        android:id="@+id/pageLetFly"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:background="@drawable/fragment_bottom_selector"
        android:button="@null"
        android:drawablePadding="3dip"
        android:gravity="center"
        android:text="@string/more"
        android:textColor="@color/white"
        android:textSize="12sp" />
</RadioGroup>