<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <FrameLayout
    android:id="@+id/camera_preview"
    android:layout_width="fill_parent"
    android:layout_height="0dp"
    android:layout_weight="1"
    
    />

  <LinearLayout 
      android:layout_width="match_parent"
      android:layout_height="45dp"
      android:orientation="horizontal"
      android:gravity="center"
      >
	  
	  <Button
	    android:id="@+id/button_capture"
	    android:text="@string/action_camera"
	    android:layout_width="100dp"
	    android:layout_height="wrap_content"
	    android:layout_gravity="center"
	    
	    android:visibility="gone"
	    />
	  <TextView android:id="@+id/image_save_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center"
	      android:visibility="visible"
	      android:text="@string/take_pic_save_text"/>
	  
	  <ProgressBar 
	      android:id="@+id/camera_gps_load_progressbar"
	      style="?android:attr/progressBarStyleSmall"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center"
	      />
	  
	  <TextView android:id="@+id/camera_gps_load_text"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center"
	      android:text="@string/take_pic_loading_text"/>
	  
  </LinearLayout>
</LinearLayout>
