<ScrollView android:id="@+id/scroll" 
    xmlns:android="http://schemas.android.com/apk/res/android"  
    android:layout_width="match_parent" 
    android:layout_height="wrap_content"  
    android:fillViewport="true" >  
    
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
     >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trace_title_note" />
    
	<EditText 
	    android:id="@+id/trace_content"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:lines="4"/>
	
	<com.zhxg.zhxgm.library.ExpandableHeightGridView
            android:id="@+id/gridGallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:horizontalSpacing="15dp"
            android:isScrollContainer="true"
            android:stretchMode="columnWidth"
    		android:verticalSpacing="20dp"
            android:numColumns="3"
            android:padding="0dp"
            android:visibility="gone"
             />
	

         
	<Button
            android:id="@+id/image_select"
            style="@style/btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_sel"
            android:text="@string/btn_pick_mul" />
	<Button
            android:id="@+id/trace_send"
            style="@style/btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/btn_sel"
            android:text="@string/trace_publish" />
	
	
	
	
	<TextView
	    android:layout_marginTop="@dimen/block_margin" 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/trace_history_title"/>
	
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="1dp"
	    android:background="@color/divider_color"
	    />
	
	 <ProgressBar
	     android:id="@+id/trace_loading"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      style="?android:attr/progressBarStyleInverse"
	      android:layout_gravity="center_horizontal"
        />
	
	<ListView 
	    android:id="@+id/trace_history"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:visibility="gone">
	    
	</ListView>
</LinearLayout>
</ScrollView>